kubernetes/apps/observability/headlamp/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  hostnames: ["${SUBDOMAIN}.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-analogpuddle
spec:
  hostnames: ["${SUBDOMAIN}.analogpuddle.com"]
  parentRefs:
    - name: envoy-internal-ap
      namespace: network
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
